# dhant

./: .gitignore  README.md  adapters.md  checklist.md  papers.md  pyproject.toml  roadmap.md
src/dhant/: __init__.py
src/dhant/cli/: __init__.py  main.py
src/dhant/rewards/: __init__.py  accuracy_reward.py  base_reward.py  format_reward.py  reasoning_reward.py
src/dhant/scripts/: __init__.py  quickstart.py
src/dhant/trainer/: __init__.py  adapters.py  base.py  dpo_config.py  dpo_trainer.py  grpo_config.py  grpo_trainer.py  reward_config.py  reward_trainer.py  sft_config.py  sft_trainer.py
tests/: test_adapters.py  test_template_trainers.py
